# zsync

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CLAUDE.md  Cargo.bazel.toml  Cargo.toml  MODULE.bazel  README.md  clippy.toml  deny.toml  flake.nix  test_scanner.rs
.github/workflows/: ci.yml  release.yml
crates/: BUILD.bazel
crates/agent/: BUILD.bazel  Cargo.toml
crates/agent/src/: main.rs
crates/cli/: BUILD.bazel  Cargo.toml  build.rs
crates/cli/src/: debug_log.rs  embedded_agents.rs  main.rs  progress.rs
crates/core/: BUILD.bazel  Cargo.toml
crates/core/src/: cache.rs  cas.rs  chunker.rs  config.rs  conflict.rs  delta.rs  hash.rs  lib.rs  protocol.rs  scan.rs  snapshot.rs  sync_state.rs
crates/transport/: BUILD.bazel  Cargo.toml
crates/transport/src/: agent.rs  lib.rs  local.rs  ssh.rs
crates/transport/tests/: ssh_e2e.rs
