[package]
name = "zsync-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remote agent for zsync"

[[bin]]
name = "zsync-agent"
path = "src/main.rs"

[dependencies]
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
clap.workspace = true
ignore.workspace = true
rayon.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true

zsync-core = { path = "../core" }

[lints]
workspace = true
