[package]
name = "zsync"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fast, modern file synchronization with native gitignore support"

[[bin]]
name = "zsync"
path = "src/main.rs"

[dependencies]
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = "0.2"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
ignore.workspace = true
dirs.workspace = true
zstd.workspace = true
humansize.workspace = true
console.workspace = true

zsync-core = { path = "../core" }
zsync-transport = { path = "../transport" }
bytes.workspace = true
uuid.workspace = true
ssh2-config.workspace = true

[lints]
workspace = true
