[package]
name = "zsync-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core sync engine for zsync"

[dependencies]
color-eyre.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ignore.workspace = true
blake3.workspace = true
rayon.workspace = true
crc32fast.workspace = true
zstd.workspace = true
bytes.workspace = true
tokio.workspace = true
hex.workspace = true
fastcdc.workspace = true
heed.workspace = true
rkyv.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
