[package]
name = "zsync-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SSH transport for zsync"

[dependencies]
color-eyre.workspace = true
tracing.workspace = true
tokio.workspace = true
dirs.workspace = true
russh.workspace = true
ssh2-config = "0.6"

zsync-core = { path = "../core" }

[lints]
workspace = true
