[package]
name = "zsync-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SSH transport for zsync"

[dependencies]
color-eyre.workspace = true
tracing.workspace = true
tokio.workspace = true
dirs.workspace = true
russh.workspace = true
async-trait.workspace = true

zsync-core = { path = "../core" }
bytes.workspace = true

[dev-dependencies]
tempfile.workspace = true
filetime = "0.2"
testcontainers.workspace = true
rstest.workspace = true

[lints]
workspace = true
